# basic_dsp

./: .gitignore  .travis.yml  Cargo.toml  Changelog.md  DONE.txt  LICENSE  Makefile  Migrationguide03To04.md  Performance Figures.txt  READING.txt  README  README Activate SIMD Compilation.txt  README.md  Release-Preperation.ps1  TODO.txt  Visual Code Cheat Sheet.txt  aliases.js  building.md  optimal.bench  rustc.bat  rustc.sh  search-index.js  settings.html  source-files.js
advapi32/: fn.AdjustTokenPrivileges.html  fn.CloseServiceHandle.html  fn.ControlService.html  fn.CreateServiceA.html  fn.CreateServiceW.html  fn.CredDeleteA.html  fn.CredDeleteW.html  fn.CredFree.html  fn.CredReadA.html  fn.CredReadW.html  fn.CredWriteA.html  fn.CredWriteW.html  fn.CryptAcquireContextA.html  fn.CryptAcquireContextW.html  fn.CryptContextAddRef.html  fn.CryptCreateHash.html  fn.CryptDecrypt.html  fn.CryptDeriveKey.html  fn.CryptDestroyHash.html  fn.CryptDestroyKey.html  fn.CryptDuplicateHash.html  fn.CryptDuplicateKey.html  fn.CryptEncrypt.html  fn.CryptEnumProviderTypesA.html  fn.CryptEnumProviderTypesW.html  fn.CryptEnumProvidersA.html  fn.CryptEnumProvidersW.html  fn.CryptExportKey.html  fn.CryptGenKey.html  fn.CryptGenRandom.html  fn.CryptGetDefaultProviderA.html  fn.CryptGetDefaultProviderW.html  fn.CryptGetHashParam.html  fn.CryptGetKeyParam.html  fn.CryptGetProvParam.html  fn.CryptGetUserKey.html  fn.CryptHashData.html  fn.CryptHashSessionKey.html  fn.CryptImportKey.html  fn.CryptReleaseContext.html  (+84 more)
arrayvec/: index.html  struct.ArrayString.html  struct.ArrayVec.html  struct.CapacityError.html  struct.Drain.html  struct.IntoIter.html  trait.Array.html  trait.RangeArgument.html
basic_dsp/: BufferBorrow.t.html  ComplexFreqVec32.t.html  ComplexFreqVecSlice64.t.html  DspVec.t.html  ErrorReason.t.html  FixedLenBuffer.t.html  MapInplaceOps.t.html  PaddingOption.t.html  RealTimeVecSlice32.t.html  RealToComplexTransformsOpsBuffered.t.html  RededicateForceOps.t.html  ResizeOps.t.html  STATS_VEC_CAPACTIY.v.html  StatsVec.t.html  TimeOrFrequencyData.t.html  ToComplexVectorPar.t.html  ToDspVectorPar.t.html  ToRealVector.t.html  ToRealVectorPar.t.html  VoidResult.t.html  all.html  constant.STATS_VEC_CAPACTIY.html  enum.DataDomain.html  enum.DataVectorDomain.html  enum.ErrorReason.html  enum.EvenOdd.html  enum.Operation.html  enum.PaddingOption.html  fn.print_calibration.html  index.html  macro.try_vec!.html  print_calibration.v.html  sidebar-items.js  struct.ComplexData.html  struct.ComplexFreqVector.html  struct.ComplexTimeVector.html  struct.DspVec.html  struct.FixedLenBuffer.html  struct.FixedLenBufferBurrow.html  struct.FrequencyData.html  (+158 more)
basic_dsp_matrix/: Matrix.t.html  (+79 more)
interop/: Cargo.toml
interop/src/: combined_ops32.rs  combined_ops64.rs  facade32.rs  facade32_check_completness.pl  facade64.rs  facade64_create.pl  lib.rs
matrix/: Cargo.toml
matrix/src/: complex.rs  definitions.rs  general.rs  lib.rs  mat_impl.rs  real.rs  rededicate.rs  time_freq.rs  to_from_mat_conversions.rs
matrix/src/forwards/: complex.rs  general.rs  mod.rs  real.rs  rededicate.rs  time_freq.rs
matrix/src/general/: elementary.rs  mod.rs  statistics.rs
vector/: Cargo.toml
vector/src/: combined_ops.rs  conv_types.rs  lib.rs  meta.rs  multicore_support.rs  window_functions.rs
vector/src/gpu_support/: fallback.rs  mod.rs  ocl.rs
vector/src/gpu_support/ocl/: mod.rs  ocl_kernels32.rs  ocl_kernels64.rs
vector/src/inline_vector/: dynamic.rs  fixed_size.rs  mod.rs
vector/src/interop_facade/: facade32.rs  facade32_check_completness.pl  facade64.rs  facade64_create.pl  mod.rs
vector/src/multicore_support/: mod.rs  no_threading.rs  threading.rs
vector/src/simd_extensions/: approx_fallback.rs  approximations.rs  avx.rs  avx512.rs  fallback.rs  mod.rs  other_cpu.rs  simd_partition.rs  sse.rs  x86.rs
vector/src/vector_types/: basic_functions.rs  buffer.rs  buffer2.rs  checks_and_results.rs  complex_forward.rs  complex_impl.rs  convolution_impl.rs  correlation_impl.rs  definitions.rs  general_forward.rs  general_impl.rs  interpolation_impl.rs  mod.rs  multi_ops.rs  operations_enum.rs  real_forward.rs  real_impl.rs  rededicate_and_relations.rs  rededicate_impl.rs  requirements.rs  stats_impl.rs  struct_macros.rs  support_core.rs  support_std.rs  support_std_par.rs  time_freq_impl.rs  to_from_vec_conversions.rs  vec_impl_and_indexers.rs
vector/src/vector_types/combined_ops/: identifier_ops.rs  mod.rs  multi_ops.rs  operations_enum.rs  ops_impl.rs  prepared_ops.rs
vector/src/vector_types/complex/: complex.rs  complex_ops.rs  complex_to_real.rs  mod.rs
vector/src/vector_types/general/: data_reorganization.rs  diff_sum.rs  dot_products.rs  elementary.rs  mapping.rs  mod.rs  precise_stats.rs  statistics.rs  trigonometry_and_powers.rs
vector/src/vector_types/real/: mod.rs  real.rs  real_ops.rs  real_to_complex.rs
vector/src/vector_types/time_freq/: convolution.rs  correlation.rs  freq.rs  freq_to_time.rs  interpolation.rs  mod.rs  real_interpolation.rs  time.rs  time_to_freq.rs
vector/src/vector_types2/: buffer.rs  checks_and_results.rs  complex_to_real.rs  data_reorganization.rs  elementary.rs  mapping.rs  mod.rs  rededicate_and_relations.rs  redicate_and_relations.rs  requirements.rs  to_from_vec_conversions.rs  trigonometry.rs  trigonometry_and_powers.rs  vec_impl_and_indexers.rs  vec_trait_and_indexers.rs
vector/src/vector_types2/combined_ops/: identifier_ops.rs  mod.rs  multi_ops.rs  prepared_ops.rs
vector/src/vector_types2/complex/: complex.rs  complex_to_real.rs  mod.rs
vector/src/vector_types2/general/: data_reorganization.rs  diff_sum.rs  dot_products.rs  elementary.rs  mapping.rs  mod.rs  statistics.rs  trigonometry_and_powers.rs
vector/src/vector_types2/multi_ops/: identifier_ops.rs  mod.rs  multi_ops.rs  multi_ops_and_prepared_ops.rs  operations_enum.rs
vector/src/vector_types2/real/: mod.rs  real.rs  real_to_complex.rs
vector/src/vector_types2/time_freq/: convolution.rs  correlation.rs  freq.rs  freq_to_time.rs  interpolation.rs  mod.rs  time.rs  time_freq.rs  time_to_freq.rs
(+75700 files in other folders)
