[package]
name = "basic_dsp_interop"
version = "0.5.1"
authors = ["Christian Liebhardt"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/liebharc/basic_dsp"
repository = "https://github.com/liebharc/basic_dsp"
documentation = "https://liebharc.github.io/basic_dsp/basic_dsp/"
keywords = ["dsp", "vector", "interpolation", "convolution", "matrix"]
description = """
This lib offers a C compatible interface for `basic_dsp_vector`, so that it can be used from programs written in languages other than Rust.

`basic_dsp_vector` provides digital signal processing based on real or complex vectors in time or frequency domain.
Vectors come with basic arithmetic, convolution, Fourier transformation and interpolation operations. The vectors are optimized for sizes of a couple of thousand elements or more.
"""

[profile.dev]
codegen-units = 4

[profile.test]
codegen-units = 4

[dependencies]
num-complex = "^0.1.34"

[dependencies.basic_dsp_vector]
optional = false
path = "../vector"
version = "^0.5.1"

[features]
use_avx = []
use_sse = []
