[package]
name = "basic_dsp_interop"
version = "0.9.0"
authors = ["Christian Liebhardt"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/liebharc/basic_dsp"
repository = "https://github.com/liebharc/basic_dsp"
documentation = "https://liebharc.github.io/basic_dsp/basic_dsp/"
keywords = ["dsp", "vector", "interpolation", "convolution", "matrix"]
edition="2018"
description = """
This lib offers a C compatible interface for `basic_dsp_vector`, so that it can be used from programs written in languages other than Rust.

`basic_dsp_vector` provides digital signal processing based on real or complex vectors in time or frequency domain.
Vectors come with basic arithmetic, convolution, Fourier transformation and interpolation operations. The vectors are optimized for sizes of a couple of thousand elements or more.
"""

[profile.dev]
codegen-units = 4

[profile.test]
codegen-units = 4

[dependencies]
num-complex = "^0.3"

[dependencies.basic_dsp_vector]
optional = false
default-features = false
path = "../vector"
version = "^0.9.0"

[features]
use_avx512 = ["basic_dsp_vector/use_avx512"]
use_avx2 = ["basic_dsp_vector/use_avx2"]
use_sse2 = ["basic_dsp_vector/use_sse2"]
use_gpu = ["basic_dsp_vector/use_gpu"]
std = ["basic_dsp_vector/std"]
default = ["std"]