[package]
name = "basic_dsp_matrix"
version = "0.6.0"
authors = ["Christian Liebhardt"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/liebharc/basic_dsp"
repository = "https://github.com/liebharc/basic_dsp"
documentation = "https://liebharc.github.io/basic_dsp/basic_dsp_matrix/index.html"
keywords = ["dsp", "matrix", "interpolation", "convolution"]
description = """
This lib offers the same operations defined in `basic_dsp_vector` for matrices.
It doesn't offer complete matrix algebra by itself and instead is meant to be used in combination with other matrix libs.

`basic_dsp_vector` provides digital signal processing based on real or complex vectors in time or frequency domain.
Vectors come with basic arithmetic, convolution, Fourier transformation and interpolation operations. The vectors are optimized for sizes of a couple of thousand elements or more.
"""

[profile.dev]
codegen-units = 4

[profile.test]
codegen-units = 4

[dependencies.basic_dsp_vector]
optional = false
path = "../vector"
version = "^0.6.0"

[dev-dependencies]
hamcrest = "^0.1.0"
rand = "^0.3.12"

[features]
use_avx = []
use_sse = []
