[package]
name = "basic_dsp_matrix"
version = "0.9.0"
authors = ["Christian Liebhardt"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/liebharc/basic_dsp"
repository = "https://github.com/liebharc/basic_dsp"
documentation = "https://docs.rs/basic_dsp"
keywords = ["dsp", "matrix", "interpolation", "convolution"]
edition="2018"
description = "Digital signal processing based on real or complex vectors in time or frequency domain."
readme = "../README.md"

[profile.dev]
codegen-units = 4

[profile.test]
codegen-units = 4

[dependencies.basic_dsp_vector]
optional = false
default-features = false
path = "../vector"
version = "^0.9.0"

[dev-dependencies]
hamcrest = "^0.1.0"
rand = "^0.7.0"

[features]
use_avx512 = ["basic_dsp_vector/use_avx512"]
use_avx2 = ["basic_dsp_vector/use_avx2"]
use_sse2 = ["basic_dsp_vector/use_sse2"]
use_gpu = ["basic_dsp_vector/use_gpu"]
std = ["basic_dsp_vector/std"]
default = ["std"]
