[package]
name = "basic_dsp_vector"
version = "0.4.3"
authors = ["Christian Liebhardt"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/liebharc/basic_dsp"
repository = "https://github.com/liebharc/basic_dsp"
documentation = "https://liebharc.github.io/basic_dsp/basic_dsp/"
keywords = ["dsp", "vector", "interpolation", "convolution", "matrix"]
description = """
Digital signal processing based on real or complex vectors in time or frequency domain.
Vectors come with basic arithmetic, convolution, Fourier transformation and interpolation operations. The vectors are optimized for sizes of a couple of thousand elements or more.
"""

[profile.dev]
codegen-units = 4

[profile.test]
codegen-units = 4

[features]
default = ["std"]
use_avx = ["use_simd"]
use_sse = ["use_simd"]
use_simd = ["simd"]
use_gpu = ["ocl", "clfft"]
std = ["crossbeam", "num_cpus"]

[dependencies]
simd = { version = "^0.2.0", optional = true }
ocl = { version = "^0.12.0", optional = true }
clfft = { version = "^0.2", optional = true }
num_cpus = { version="^1.2.0", optional = true }
crossbeam = { version="^0.2.0", optional = true }
num-traits = "^0.1.34"
num-complex = "^0.1.34"
rustfft = "^1.0.0"
arrayvec = "^0.3.20"
