[package]
name = "basic_dsp_vector"
version = "0.7.0"
authors = ["Christian Liebhardt"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/liebharc/basic_dsp"
repository = "https://github.com/liebharc/basic_dsp"
documentation = "https://liebharc.github.io/basic_dsp/basic_dsp_vector/index.html"
keywords = ["dsp", "vector", "interpolation", "convolution"]
edition="2018"
description = """
Digital signal processing based on real or complex vectors in time or frequency domain.
Vectors come with basic arithmetic, convolution, Fourier transformation and interpolation operations. The vectors are optimized for sizes of a couple of thousand elements or more.
"""

[profile.dev]
codegen-units = 4

[profile.test]
codegen-units = 4

[features]
default = ["std", "use_sse2", "use_avx2"]
use_avx2 = ["use_simd"]
use_avx512 = ["use_simd"]
use_sse2 = ["use_simd"]
use_simd = ["simd"]
use_gpu = ["ocl", "clfft"]
std = ["crossbeam", "lazy_static", "num_cpus", "time", "linreg"]

[dependencies]
simd = { version = "0.2.3", optional = true }
ocl = { version = "^0.19.0", optional = true }
clfft = { version = "^0.3.3", optional = true }
crossbeam = { version="^0.6.0", optional = true }
lazy_static = { version="^1.2.0", optional = true }
time = { version="^0.1.40", optional = true }
num_cpus = { version="^1.9.0", optional = true }
linreg  = { version="^0.1.3", optional = true }
num-traits = "^0.2"
num-complex = "^0.2"
rustfft = "^3.0.0"
arrayvec = "^0.4.0"
