[package]
name = "basic_dsp_vector"
version = "0.10.0"
authors = ["Christian Liebhardt"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/liebharc/basic_dsp"
repository = "https://github.com/liebharc/basic_dsp"
documentation = "https://docs.rs/basic_dsp"
keywords = ["dsp", "vector", "interpolation", "convolution"]
edition="2021"
description = "Digital signal processing based on real or complex vectors in time or frequency domain."
readme = "../README.md"

[profile.dev]
codegen-units = 4

[profile.test]
codegen-units = 4

[features]
default = ["std"]
use_avx2 = ["use_simd"]
use_avx512 = ["use_simd"]
use_sse2 = ["use_simd"]
use_simd = ["packed_simd"]
use_gpu = ["ocl", "clfft"]
std = ["crossbeam", "lazy_static", "num_cpus", "time", "linreg"]

[dependencies]
packed_simd = { version = "^0.3.9", optional = true }
ocl = { version = "^0.19.0", optional = true }
clfft = { version = "^0.3.3", optional = true }
crossbeam = { version="^0.8.1", optional = true }
lazy_static = { version="^1.4.0", optional = true }
time = { version="^0.3.0", optional = true }
num_cpus = { version="^1.13.0", optional = true }
linreg  = { version="^0.2.0", optional = true }
num-traits = "^0.2"
num-complex = "^0.4"
rustfft = "^6.0.0"
arrayvec = "^0.7.0"
